Ready to submit!

--- a/project/index.html
+++ b/project/index.html
@@ -115,9 +115,9 @@
                                 <div class="col-sm-9">
                                     <input type="text" id="originFarmName" name="originFarmName" placeholder="Mihan Dairy">
                                 </div>
-                                <label for="originFarmName" class="col-sm-3 col-form-label">Poulterer Information</label>
+                                <label for="originFarmInformation" class="col-sm-3 col-form-label">Poulterer Information</label>
                                 <div class="col-sm-9">
-                                    <input type="text" id="originFarmName" name="originFarmName" placeholder="A factory that try to produce fresh and organic milk!">
+                                    <input type="text" id="originFarmInformation" name="originFarmInformation" placeholder="A factory that try to produce fresh and organic milk!">
                                 </div>
                                 <label for="originFarmLatitude" class="col-sm-3 col-form-label">Poulterer Latitude</label>
                                 <div class="col-sm-9">
@@ -187,8 +187,8 @@
                         <button class="btn-buy-dairyfactory-item" id="button" type="button" data-id="7">Buy</button>
                         <button class="btn-receive-dairyfactory-item" id="button" type="button" data-id="9">Received</button>
                         <button class="btn-process-dairyfactory-item" id="button" type="button" data-id="10">Process</button>
-                        <button class="btn-pack-dairyfactory-item" id="button" type="button" data-id="10">Pack</button>
-                        <button class="btn-sell-dairyfactory-item" id="button" type="button" data-id="11">Sell</button>
+                        <button class="btn-pack-dairyfactory-item" id="button" type="button" data-id="11">Pack</button>
+                        <button class="btn-sell-dairyfactory-item" id="button" type="button" data-id="12">Sell</button>
                         <button class="btn-ship-dairyfactory-item" id="button" type="button" data-id="13">Ship</button>
                         <div class="alert alert-success" id="alert-dairyfactory-success" role="alert" style="display:none;"></div>
                         <div class="alert alert-danger" id="alert-dairyfactory-error" role="alert" style="display:none;"></div>
@@ -203,9 +203,9 @@
                     <div class="card-body">
                         <form>
                             <div class="form-group row">
-                                <label for="upcDairyfactoryChangeState" class="col-sm-3 col-form-label">UPC</label>
+                                <label for="upcDistributorChangeState" class="col-sm-3 col-form-label">UPC</label>
                                 <div class="col-sm-9">
-                                    <input class="input-field" type="number" id="upcDairyfactoryChangeState" name="upcDairyfactoryChangeState" placeholder=1 step="1" pattern="\d+"><br>
+                                    <input class="input-field" type="number" id="upcDistributorChangeState" name="upcDistributorChangeState" placeholder=1 step="1" pattern="\d+"><br>
                                 </div>
                                 <label for="priceDistributor" class="col-sm-3 col-form-label">Price (Eth)</label>
                                 <div class="col-sm-9">
@@ -215,8 +215,8 @@
                         </form>
                     </div>
                     <div class="card-footer">
-                        <button class="btn-buy-Distributor-item" id="button" type="button" data-id="12">Buy</button>
-                        <button class="btn-receive-Distributor-item" id="button" type="button" data-id="14">Received</button>
+                        <button class="btn-buy-Distributor-item" id="button" type="button" data-id="14">Buy</button>
+                        <button class="btn-receive-Distributor-item" id="button" type="button" data-id="15">Received</button>
                         <div class="alert alert-success" id="alert-Distributor-success" role="alert" style="display:none;"></div>
                         <div class="alert alert-danger" id="alert-Distributor-error" role="alert" style="display:none;"></div>
                     </div>
